Update and rename page.html to index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <h1>自分だけの卵を作ってみよう！！</h1>
-    <div class="bluelight"><a href="page2.html">作成開始</a></div>
-    <div class="redlight"><a href="page3.html">ログイン</a></div>
+    <div class="bluelight"><a href="index2.html">作成開始</a></div>
+    <div class="redlight"><a href="index3.html">ログイン</a></div>
 </body>
 </html>
